# EncoderDI

./: README.md  pyproject.toml
src/: dataset_inference.py  distill.py  linear.py  linear_similarity.py  model.py  prune.py  quantize.py  similarity_dist_train_test.py  test_cls.py  train_moco.py  train_simclr.py  tsne.py  utils.py
